src/views/AwsProvisioner/styles.module.css
.workerTypes :global(.progress) {
  margin-bottom: 0;
}

.actions {
  margin: 10px 0;
}

.actions > label {
  margin-right: 10px;
}

.workerTypeViewContainer {
  margin-bottom: 40px;
}

.workerTypeCreatorContainer {
  margin-bottom: 50px;
}

.workerTypeHealthItem {
  max-height: 300px;
  overflow-y: auto;
  margin-bottom: 20px;
}

.stateTable {
  margin-top: 20px;
}

.createWorkerTypeButton {
  margin-top: -10px;
  margin-right: 5px;
}

.recentErrorsButton {
  margin-top: -10px;
}

